@@ -44,7 +44,7 @@ version_conf = configuration_data()
 version_conf.set_quoted('PACKAGE', meson.project_name())
 version_conf.set_quoted('PACKAGE_NAME', meson.project_name())
 version_conf.set_quoted('VERSION', meson.project_version())
-version_conf.set_quoted('PROTOCOL_VERSION', '0.23.1')
+version_conf.set_quoted('PROTOCOL_VERSION', '0.23.3')
 configure_file(output: 'Version.h', configuration: version_conf)
 
 conf = configuration_data()
